Added new papers and sections

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,19 +17,19 @@
   - title: "Crowd-based network measurement and inference" 
     url: "/researchpapers/crowd/"   
   - title: "Client-side network control and configuration"
-    url: "/researchpapers/header-full-width-image/"
+    url: "/researchpapers/client/"
   - title: "Over The Top (OTT) content management"
-    url: "/researchpapers/header-full-width-image/"
+    url: "/researchpapers/ott/"
   - title: "Distributed data centers and local storage/computing"
-    url: "/papers/header-full-width-image/"
+    url: "/researchpapers/distributed/"
   - title: "Physical layer resource pooling among clients"
-    url: "/papers/header-full-width-image/"  
+    url: "/researchpapers/physical/"  
   - title: "Fog architecture for IoT" 
-    url: "/papers/header-full-width-image/"
+    url: "/researchpapers/fogiot/"
   - title: "Edge analytics/sensing, stream mining, and augmented reality"  
-    url: "/papers/header-full-width-image/"
+    url: "/researchpapers/edge/"
   - title: "Security and privacy of Fog"
-    url: "/papers/header-full-width-image/"
+    url: "/researchpapers/secuirty/"
   
 
 - title: Blog
