--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ logo: "logo.png"
 paginate: 5
 
 
-# Pagination path › Important for blog page in /blog/ to work
-paginate_path: "blog/page:num"
+# Pagination path › Important for news page in /news/ to work
+paginate_path: "news/page:num"
 
 
 # Theme works best with Kramdown (using the table of contents function)
