added New archive label

--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,6 +1,7 @@
 info_website: "More info on FOG networks"
 archive: "Archive"
 blog_archive: "Blog Archive"
+news_archive: "News Archive"
 blog: "Blog"
 comments_headline: "Dialogue &amp; Discussion"
 more: "More ›"
