--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "»Some description goes here!"
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
-url: "https://fognetworks.org"
+url: "https://fogresearch.github.io"
 baseurl: ""
 
 # This is for the editing function in _/includes/improve_content.html
