--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: "»Some description goes here!"
 # This URL is the main adresse. Don't include a slash at the end.
 #
 url: "https://fogresearch.github.io"
-baseurl: ""
+baseurl: "http://fognetworks.org"
 
 # This is for the editing function in _/includes/improve_content.html
 # Leave it empty if your site is not on GitHub/GitHub Pages
