--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: "»Some description goes here!"
 #baseurl: "http://localhost:4000"
 
 url: "https://fogresearch.github.io"
-#baseurl: "http://fognetworks.org"
+baseurl: "http://fognetworks.org"
 
 # This is for the editing function in _/includes/improve_content.html
 # Leave it empty if your site is not on GitHub/GitHub Pages
