--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
 rvm:
 - 2.1.1
-script: 
-- bundle exec jekyll build && bundle exec htmlproof ./_site
+script:
+- bundle install & bundle exec jekyll build && bundle exec htmlproof ./_site
