--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: "»Some description goes here!"
 # This URL is the main adresse. Don't include a slash at the end.
 #
 url: "https://fogresearch.github.io"
-#baseurl: "http://fognetworks.org"
+baseurl: "http://fognetworks.org"
 
 # This is for the editing function in _/includes/improve_content.html
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -34,7 +34,8 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
 #
-urlimg: "https://fogresearch.github.io/images/"
+#urlimg: "https://fogresearch.github.io/images/"
+urlimg: "http://fognetworks.org/images/"
 
 
 # Logo size is 600x80 pixels
